--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     
     <div class="control-group">
         <select id="sistema-selector">
-            <option value="JANINA">Aula Pro (Janaina)</option>
-            <option value="GATOS">Plantão Pro (Gatos)</option>
+            <option value="JANINA">Aula Pro</option>
+            <option value="GATOS">Plantão Pro</option>
         </select>
 
         <input type="number" id="qtd" value="50" min="1" max="1000" style="width: 80px;">
